--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,20 +6,24 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="buttonStyle">@style/Bisponet.button.theme</item>
     </style>
 
     <!--Theme for the buttons-->
     <style name="Bisponet.button.theme" parent="Base.TextAppearance.AppCompat.Button">
-        <item name="android:textSize">12sp</item>
+        <item name="android:textSize">30sp</item>
         <item name="android:padding">10dp</item>
-        <item name="android:layout_margin">10dp</item>
+        <item name="android:textAlignment">center</item>
         <item name="android:textColor">@android:color/white</item>
+        <item name="android:fontFamily">@font/bungee</item>
+        <item name="android:gravity">center_vertical</item>
     </style>
 
     <style name="Bisponet.textView.Style" parent="TextAppearance.AppCompat">
-        <item name="textSize">40dp</item>
+        <item name="android:textSize">112sp</item>
         <item name="android:textColor">@android:color/white</item>
         <item name="android:gravity">center</item>
+        <item name="android:fontFamily">@font/bungee</item>
     </style>
 
 </resources>
